@@ -26,6 +26,7 @@ import com.sun.jsftemplating.layout.descriptors.handler.OutputTypeManager;
 import com.sun.jsftemplating.util.FileUtil;
 
 import java.io.UnsupportedEncodingException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.util.ArrayList;
@@ -78,7 +79,7 @@ public class GadgetHandlers {
                 url = FileUtil.searchForFile(gadgetName, null);
             }
             if (url == null) {
-                url = new URL(gadgetName);
+                url = URI.create(gadgetName).toURL();
             }
         } catch (Exception ex) {
             throw new IllegalArgumentException("Cannot creaqte URL from '"
