@@ -17,6 +17,7 @@
 package org.glassfish.main.extras.embedded.test.all;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 
 import org.glassfish.embeddable.BootstrapProperties;
@@ -86,7 +87,7 @@ public class StartupITest {
         ServerUtils.createWar(war, TestServlet.class);
         String result = deployer.deploy(war);
         assertEquals(WEBAPP_NAME, result);
-        URL url = new URL("http", "localhost", HTTP_PORT, "/" + WEBAPP_NAME);
+        URL url = new URI("http", null, "localhost", HTTP_PORT, "/" + WEBAPP_NAME, null, null).toURL();
         assertEquals(RESPONSE_TEXT, ServerUtils.download(url));
     }
 }
